--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,6 +12,10 @@
 
     <script src="{{ site.baseurl }}/js/jquery.min.js"></script>
     <script src="{{ site.baseurl }}/js/bootstrap.min.js"></script>
+    <script src="{{ site.baseurl }}/js/highlight.min.js"></script>
     <script src="{{ site.baseurl }}/js/material.min.js"></script>
+    
+    <script>hljs.initHighlightingOnLoad();</script>
+
 </body>
 </html>
