--- a/_includes/header.html
+++ b/_includes/header.html
@@ -29,10 +29,10 @@
               <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="{{ site.baseurl }}/">Home</a></li>
-                    <li class="active visible-xs-block"><a href="{{ site.baseurl }}/links.html">Links</a></li>
+                    <!-- li class="active visible-xs-block"><a href="{{ site.baseurl }}/links.html">Links</a></li>
                     <li class="active"><a href="{{ site.baseurl }}/news/">News</a></li>
                     <li class="active"><a href="{{ site.baseurl }}/about.html">About</a></li>
-                    <li class="active"><a href="{{ site.baseurl }}/feed.xml">RSS</a></li>
+                    <li class="active"><a href="{{ site.baseurl }}/feed.xml">RSS</a></li-->
                     {% if site.github != '' %}
                       <a href="https://github.com/gomoob/backbone.hateoas"
                          target="_blank">
