--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,10 +9,10 @@
 	            </h4>
 	            <ul>
 	                <li>
-	                    <h5><a href="#hateoas">HATEOAS</a></h5>
+	                    <h5><a href="#introduction">Introduction</a></h5>
 	                </li>
 	                <li>
-	                    <h5><a href="#hal">HAL</a></h5>
+	                    <h5><a href="#install">Install</a></h5>
 	                </li>
 	            </ul>
 	        </div>
