Add sidebar links for the release histories 0.1.0-beta.1 and 0.1.0-beta.2

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -75,6 +75,12 @@
                 </h4>
                 <ul>
                     <li>
+                        <h5><a href="#0.1.0-beta.2">0.1.0-beta.2</a></h5>
+                    </li>
+                    <li>
+                        <h5><a href="#0.1.0-beta.1">0.1.0-beta.1</a></h5>
+                    </li>
+                    <li>
                         <h5><a href="#0.1.0-alpha9">0.1.0-alpha9</a></h5>
                     </li>
                     <li>
